<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:paddingLeft="8dp" >

            <TableRow
                android:id="@+id/TableRowLat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Lat_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Latitude"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Lat_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRowLong"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Long_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Longitude"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Long_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRowAlt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Alt_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Altitude"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Alt_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />
            </TableRow>




            <TableRow
                android:id="@+id/TableRowSpeed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Speed_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Speed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Speed_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRowBearing"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Bearing_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Bearing"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Bearing_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>
            <TableRow
                android:id="@+id/TableRowGpsStatus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Status_GPS_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/GpsStatus"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/Status_GPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/NotActive"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>
            <TableRow
                android:id="@+id/TableRowTargetIP"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Target_IP_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/TargetIPCaption"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/EditTextTargetIP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/DefaultTargetIP"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" >
                    <requestFocus />
                </EditText>


            </TableRow>
            <TableRow
                android:id="@+id/TableRowTargetPort"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Target_Port_Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/TargetPortCaption"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/EditTextTargetPort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/DefaultTargetPort"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

            </TableRow>
            <TableRow
                android:id="@+id/TableRowStartStop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1" >

                <ToggleButton
                    android:id="@+id/ToggleButtonStartStop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/TextViewActivateWiFiStream" />
            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>